k8s/seerr/app/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: seerr-ingressroute
  namespace: seerr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`seerr.home.coredev.uk`)
      kind: Rule
      services:
        - name: seerr
          port: 80
  tls:
    secretName: seerr-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: seerr-redirect
  namespace: seerr
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`seerr.home.coredev.uk`)
      kind: Rule
      middlewares:
        - name: https-redirect
      services:
        - name: seerr
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: https-redirect
  namespace: seerr
spec:
  redirectScheme:
    scheme: https
    permanent: true
